new file:   src/components/commentedcode.txt 	modified:   src/components/recorder.jsx

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script>
+      // const API_URL = "http://localhost:5000";
+      const API_URL = "https://f09c-2409-40c2-1049-feaa-cd1b-d29-cc0d-2b44.ngrok-free.app";
+
+      // const userId = `id-${Date.now()}-${Math.floor(Math.random() * 10000)}`;
+      // console.log("user id ==== ",userId);
+
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
